--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h2>This is my collection of projects carried out during The Odin Project course</h2>
     <ol>
         <li><a href="./recipes.html">Project: Recipes</a></li>
+        <li><a href="./landing_page.html">Project: Landing Page</a></li>
     </ol>
 </body>
 
