Update "Project: Landing Page"

--- a/landing_page.html
+++ b/landing_page.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Alysonhower</h1>
+    <h1>Synthwave</h1>
     <nav>
       <ol>
         <li><a href="./index.html">Home</a>
@@ -21,13 +21,16 @@
   </header>
   <main>
     <div class="sessionText">
-      <h1>This website is aweasome!</h1>
-      <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.
+      <h2>Future is an analog arcade trip down the neon space beach</h2>
+      <br>
+      <p>Synthwave is a musical and aesthetic micro niche with origins in the mid-2000s with influences from movie
+        soundtracks, video games and television between the 80s and 90s.</p>
     </div>
-    <img src="cyberpunkguy.jpg" alt="Cyberpunkguy" width="300px">
-  </main>
-
-
+    <div class="sessionImage">
+      <img src="drive.gif" alt="drive.gif source:https://www.reddit.com/r/outrun/comments/9vo6rj/drive/"
+        style="width:350px">
+      <p>source:https://www.reddit.com/r/outrun/comments/9vo6rj/drive/</p>
+    </div>
 </body>
 
 </html>
