Update "Project: Landing Page"

--- a/landing_page.html
+++ b/landing_page.html
@@ -24,9 +24,10 @@
     </nav>
   </header>
   <main>
-    <div class="sectionOne">
+    <h2 class="title" id="sectionOneTitle">"Future is an analog arcade trip down the neon space beach"</h2>
+    <div class="section">
       <div class="sectionText">
-        <h2>Future is an analog arcade trip down the neon space beach</h2>
+        <h3><strong>Synthwave definition</strong></h3>
         <br>
         <p>Synthwave is a musical and aesthetic niche with origins in the mid-2000s with influences from movie
           soundtracks, video games and elevision between the 80s and 90s.</p>
@@ -40,9 +41,12 @@
           artists a wide creative spectrum. This characteristic gave rise to a countless number of subgenres (in some
           moments, the distinction between them occurs more by differences in aesthetic orientation than by music). Just
           to the right (or below if you're using a smartphone) you can hear one of my favorite variations: the
-          chillsynth.
-          Please feel free to enjoy the experience through the work of one of the best artists today <a
+          chillsynth. Please feel free to enjoy the experience through the work of one of the best artists today <a
             href="https://soundcloud.com/alis_on" class="ALISON">A.L.I.S.O.N</a></p>
+        <br>
+        <p id="advice">ATTENTION: All rights to the songs are reserved by the composer and the exhibition on this
+          website was acquired through express authorization for educational purposes. If you like it, please buy it.
+        </p>
       </div>
 
       <div class="player">
@@ -70,9 +74,24 @@
       </div>
     </div>
 
-    <div class="sectionTwo">
-      <h1 class="sectionTwo">In the future we will be mechanized humans... or maybe humanized machines... or maybe we
-        will just be information</h1>
+
+    <h2 class="title sectionTwoColors">"In the future we will be mechanized humans... or maybe humanized machines...
+      or maybe we will just be information... but who cares?"</h2>
+    <div class="section">
+      <h1 class="sectionText">Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit
+        enim labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur
+        officia. Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est
+        proident. Nostrud officia pariatur ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit
+        commodo officia dolor Lorem duis laboris cupidatat officia voluptate. Culpa proident adipisicing id nulla nisi
+        laboris ex in Lorem sunt duis officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis sunt velit
+        enim. Voluptate laboris sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.</h1>
+      <h1 class="sectionText">Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit
+        enim labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur
+        officia. Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est
+        proident. Nostrud officia pariatur ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit
+        commodo officia dolor Lorem duis laboris cupidatat officia voluptate. Culpa proident adipisicing id nulla nisi
+        laboris ex in Lorem sunt duis officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis sunt velit
+        enim. Voluptate laboris sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.</h1>
     </div>
   </main>
 
