Update "Project: Landing Page"

--- a/landing_page.html
+++ b/landing_page.html
@@ -27,7 +27,7 @@
     <h2 class="title" id="sectionOneTitle">"Future is an analog arcade trip down the neon space beach"</h2>
     <div class="section">
       <div class="sectionText">
-        <h3><strong>Synthwave definition</strong></h3>
+        <h3><strong>SYNTHWAVE DEFINITION</strong></h3>
         <br>
         <p>Synthwave is a musical and aesthetic niche with origins in the mid-2000s with influences from movie
           soundtracks, video games and elevision between the 80s and 90s.</p>
@@ -78,20 +78,24 @@
     <h2 class="title sectionTwoColors">"In the future we will be mechanized humans... or maybe humanized machines...
       or maybe we will just be information... but who cares?"</h2>
     <div class="section">
-      <h1 class="sectionText">Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit
-        enim labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur
-        officia. Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est
-        proident. Nostrud officia pariatur ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit
-        commodo officia dolor Lorem duis laboris cupidatat officia voluptate. Culpa proident adipisicing id nulla nisi
-        laboris ex in Lorem sunt duis officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis sunt velit
-        enim. Voluptate laboris sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.</h1>
-      <h1 class="sectionText">Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit
-        enim labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur
-        officia. Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est
-        proident. Nostrud officia pariatur ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit
-        commodo officia dolor Lorem duis laboris cupidatat officia voluptate. Culpa proident adipisicing id nulla nisi
-        laboris ex in Lorem sunt duis officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis sunt velit
-        enim. Voluptate laboris sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.</h1>
+      <div class="sectionText">
+        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi Lorem
+          pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur officia. Reprehenderit nostrud
+          nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident. Nostrud officia
+          pariatur ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit commodo officia dolor Lorem
+          duis laboris cupidatat officia voluptate. Culpa proident adipisicing id nulla nisi laboris ex in Lorem sunt
+          duis officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis sunt velit enim. Voluptate laboris
+          sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.
+      </div>
+      <div class="sectionText">
+        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi Lorem
+          pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur officia. Reprehenderit nostrud
+          nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident. Nostrud officia
+          pariatur ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit commodo officia dolor Lorem
+          duis laboris cupidatat officia voluptate. Culpa proident adipisicing id nulla nisi laboris ex in Lorem sunt
+          duis officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis sunt velit enim. Voluptate laboris
+          sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.
+      </div>
     </div>
   </main>
 
