--- a/landing_page.html
+++ b/landing_page.html
@@ -13,16 +13,24 @@
 </head>
 
 <body>
-  <header>
-    <h1>Synthwave</h1>
-    <nav>
-      <ol>
-        <li><a href="./index.html">Home</a>
-        <li><a href="./index.html">Home</a>
-        <li><a href="./index.html">Home</a>
-      </ol>
-    </nav>
-  </header>
+  <!-- <header> -->
+  <!--   <h1>Synthwave</h1> -->
+  <!--   <nav> -->
+  <!--     <ol> -->
+  <!--       <li><a href="./index.html">Home</a> -->
+  <!--       <li><a href="./index.html">Home</a> -->
+  <!--       <li><a href="./index.html">Home</a> -->
+  <!--     </ol> -->
+  <!--   </nav> -->
+  <!-- </header> -->
+  <div class="header">
+    <a href="#default" class="logo">Synthwave</a>
+    <div class="header-right">
+      <a class="active" href="#home">Home</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
+  </div>
   <main>
     <h2 class="title" id="sectionOneTitle">"Future is an analog arcade trip down the neon space beach"</h2>
     <div class="section">
