--- a/landing_page.html
+++ b/landing_page.html
@@ -23,14 +23,45 @@
   <!--     </ol> -->
   <!--   </nav> -->
   <!-- </header> -->
-  <div class="header">
-    <a href="#default" class="logo">Synthwave</a>
-    <div class="header-right">
-      <a class="active" href="#home">Home</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
-    </div>
-  </div>
+
+  <!-- <div class="header"> -->
+  <!--   <a href="#default" class="logo">Synthwave</a> -->
+  <!--   <div class="header-right"> -->
+  <!--     <a class="active" href="#home">Home</a> -->
+  <!--     <a href="#contact">Contact</a> -->
+  <!--     <a href="#about">About</a> -->
+  <!--   </div> -->
+  <!-- </div> -->
+
+  <nav class="navbar">
+    <!-- LOGO -->
+    <div class="logo">Synthwave</div>
+    <!-- NAVIGATION MENU -->
+    <ul class="nav-links">
+      <!-- USING CHECKBOX HACK -->
+      <input type="checkbox" id="checkbox_toggle" />
+      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+      <!-- NAVIGATION MENUS -->
+      <div class="menu">
+        <li><a href="/">Home</a></li>
+        <li><a href="/">About</a></li>
+        <li class="services">
+          <a href="/">Services</a>
+          <!-- DROPDOWN MENU -->
+          <ul class="dropdown">
+            <li><a href="/">Dropdown 1 </a></li>
+            <li><a href="/">Dropdown 2</a></li>
+            <li><a href="/">Dropdown 2</a></li>
+            <li><a href="/">Dropdown 3</a></li>
+            <li><a href="/">Dropdown 4</a></li>
+          </ul>
+        </li>
+        <li><a href="/">Pricing</a></li>
+        <li><a href="/">Contact</a></li>
+      </div>
+    </ul>
+  </nav>
+
   <main>
     <h2 class="title" id="sectionOneTitle">"Future is an analog arcade trip down the neon space beach"</h2>
     <div class="section">
