Update header "Project: Landing Page"

--- a/landing_page.html
+++ b/landing_page.html
@@ -46,17 +46,15 @@
         <li><a href="/">Home</a></li>
         <li><a href="/">About</a></li>
         <li class="services">
-          <a href="/">Services</a>
+          <a href="/">Projects <i class="arrow-down"></i></a>
           <!-- DROPDOWN MENU -->
           <ul class="dropdown">
-            <li><a href="/">Dropdown 1 </a></li>
-            <li><a href="/">Dropdown 2</a></li>
-            <li><a href="/">Dropdown 2</a></li>
-            <li><a href="/">Dropdown 3</a></li>
-            <li><a href="/">Dropdown 4</a></li>
+            <li><a href="/">Recipes</a></li>
+            <li><a href="/">Rock Paper Scissors</a></li>
+            <li><a href="/">Etch-a-Sketch</a></li>
+            <li><a href="/">Calculator</a></li>
           </ul>
         </li>
-        <li><a href="/">Pricing</a></li>
         <li><a href="/">Contact</a></li>
       </div>
     </ul>
@@ -81,10 +79,10 @@
           moments, the distinction between them occurs more by differences in aesthetic orientation than by music). Just
           to the right (or below if you're using a smartphone) you can hear one of my favorite variations: the
           chillsynth. Please feel free to enjoy the experience through the work of one of the best artists today <a
-            href="https://soundcloud.com/alis_on" class="ALISON">A.L.I.S.O.N</a></p>
+            href="https://soundcloud.com/alis_on" class="artist">A.L.I.S.O.N</a></p>
         <br>
         <p id="advice">ATTENTION: All rights to the songs are reserved by the composer and the exhibition on this
-          website was acquired through express authorization for educational purposes. If you like it, please buy it.
+          website was acquired through express authorization for educational purposes. If you like it, please give him a coffe.
         </p>
       </div>
 
@@ -114,8 +112,7 @@
     </div>
 
 
-    <h2 class="title sectionTwoColors">"In the future we will be mechanized humans... or maybe humanized machines...
-      or maybe we will just be information... but who cares?"</h2>
+    <h2 class="title sectionTwoColors">"In the future we will be mechanized humans... or maybe humanized machines..."</h2>
     <div class="section">
       <div class="sectionText">
         <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi Lorem
