Update header "Project: Landing Page"

--- a/landing_page.html
+++ b/landing_page.html
@@ -64,7 +64,7 @@
     <h2 class="title" id="sectionOneTitle">"Future is an analog arcade trip down the neon space beach"</h2>
     <div class="section">
       <div class="sectionText">
-        <h3><strong>SYNTHWAVE DEFINITION</strong></h3>
+        <h3><strong>FORM AND DEFINITION</strong></h3>
         <br>
         <p>Synthwave is a musical and aesthetic niche with origins in the mid-2000s with influences from movie
           soundtracks, video games and elevision between the 80s and 90s.</p>
@@ -115,6 +115,8 @@
     <h2 class="title sectionTwoColors">"In the future we will be mechanized humans... or maybe humanized machines..."</h2>
     <div class="section">
       <div class="sectionText">
+        <h3><strong>SUBGENRES</strong></h3>
+        <br>
         <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi Lorem
           pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur officia. Reprehenderit nostrud
           nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident. Nostrud officia
