Start "Project: Rock Paper Scissors"

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <ol>
     <li><a href="./recipes.html">Project: Recipes</a></li>
     <li><a href="./landing_page.html">Project: Landing Page</a></li>
+    <li><a href="./rock_paper_scissors.html">Project: Rock Paper Scissors</a></li>
   </ol>
 </body>
 
